# rss-reader-service

./: .gitignore  Cargo.toml  todo.org
bruno/: Get Categories.bru  Get RSS Feeds.bru  bruno.json
bruno/Admin/: Batch Create Feeds.bru  Create Feed.bru  Delete Feed.bru  Get Raw Feeds.bru  Update Raw Feed.bru
bruno/Auth/: Check GitHub Token.bru  Get GitHub Access Token.bru  Get GitHub User.bru  Revoke GitHub Token.bru
bruno/environments/: RSS Reader ENV - Local.bru  RSS Reader ENV.bru
migrations/: 20240821052834_rss-reader-service.sql  20240912225510_cache-update.sql  20241219225411_init.sql
src/: error.rs  main.rs
src/auth/: authorization.rs
src/data/: atom.rs  cache.rs  feeds.rs  mod.rs  rss.rs  xml.rs
src/db/: cache.rs  feeds.rs  mod.rs
src/service/: cache.rs  feeds.rs  mod.rs  xml.rs
